# nsi-py

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/: conf.py  index.rst  modules.rst  nsipy.rst
nsi-py/: __init__.py
nsipy/: __init__.py  nsi.py
tests/: test_geoid.py
