[tool.poetry]
name = "nsipy"
version = "0.1.1"
description = "Package to download data from the U.S. Army Corps of Engineers National Structures Inventory using the NSI API."
authors = ["Sebastian Rowan <sebastian.rowan@unh.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
geopandas = "^1.0.1"
pandas = "^2.2.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
